[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-keepass-import"
description = "Import KeePass secrets in Hashicorp Vault"
authors = [
    {"name" = "NetNeutralNetworks","email" = "noc@ncubed.nl"}
]

version = "2.0.0"

readme = "README.md"
# homepage = "https://lab.enough.community/singuliere/vault-keepass-import"
# repository = "https://github.com/draggeta/vault-keepass-import"
# description-content-type = text/markdown; charset=UTF-8
# project_urls =
#     Bug Tracker = https://lab.enough.community/singuliere/vault-keepass-import/issues
#     Documentation = https://vault-keepass-import.readthedocs.io/
#     Source Code = https://lab.enough.community/singuliere/vault-keepass-import
# license = GPLv3+
# # https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dependencies = [
    "hvac==0.11.2",
    "hvac-cli==1.2.3",
    "pbr==5.10.0",
    "pykeepass==4.0.3",
]

[project.optional-dependencies]
build = [
  'pyinstaller==5.3',
]

[tool.setuptools]
package-dir = {"" = "vault_keepass_import"}

[project.scripts]
vault-keepass-import = "vault_keepass_import.main:main"
